# circularity

./: .gitignore  CMakeLists.txt  README.md  aligned.hpp  aligned_autotest.cpp  based.hpp  based.ipp  based_autotest.cpp
aligned/: CMakeLists.txt  aligned_autotest.cpp
based/: CMakeLists.txt
